# events-manager-app

./: .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.weather  README.md  compose.yaml  pyproject.toml
.github/workflows/: run-pre-commit.yaml
core/: celery.py  settings.py  urls.py
events/: resources.py  task.py  urls.py
events/filters/: __init__.py  event.py  event_export.py
events/migrations/: 0001_initial.py  0002_event_weather_data.py
events/models/: __init__.py  event.py  place.py
events/serializers/: __init__.py  event.py  event_image.py  place.py
events/services/: sync_event_with_weather.py
events/views/: __init__.py  event.py  event_import_export.py  place.py
grpc_config/: weather.proto  weather_pb2.py  weather_pb2_grpc.py
weather/: app.py  weather_client.py
